--- a/index.html
+++ b/index.html
@@ -105,6 +105,35 @@
             text-decoration: none;
             cursor: pointer;
         }
+
+        .range-selector {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+        }
+
+        .range-btn {
+            padding: 8px 15px;
+            border: 1px solid #3498db;
+            background: white;
+            color: #3498db;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 0.9em;
+            transition: all 0.2s;
+            min-width: 60px;
+        }
+
+        .range-btn:hover {
+            background: #ebf5fb;
+        }
+
+        .range-btn.active {
+            background: #3498db;
+            color: white;
+        }
     </style>
 </head>
 
@@ -118,6 +147,14 @@
         <div id="chart-view" class="chart-container">
             <div class="back-btn" onclick="hideChart()">🔙 返回列表</div>
             <h2 id="chart-title">趨勢圖</h2>
+            <div class="range-selector">
+                <button class="range-btn" onclick="changeRange('1W', this)">1W</button>
+                <button class="range-btn active" onclick="changeRange('1M', this)">1M</button>
+                <button class="range-btn" onclick="changeRange('3M', this)">3M</button>
+                <button class="range-btn" onclick="changeRange('6M', this)">6M</button>
+                <button class="range-btn" onclick="changeRange('1Y', this)">1Y</button>
+                <button class="range-btn" onclick="changeRange('ALL', this)">ALL</button>
+            </div>
             <canvas id="myChart"></canvas>
         </div>
     </div>
@@ -130,6 +167,10 @@
             { code: 'NTDVND', name: 'NTD vs VND', file: 'data/currency/NTDVND.csv', field: 'Close' },
             { code: 'GOLD', name: 'Gold (TWD/g)', file: 'data/gold_prices.csv', field: 'sell_price', dateField: 'date' }
         ];
+
+        let currentSym = null;
+        let currentData = [];
+        let chartInstance = null;
 
         async function loadData(file) {
             return new Promise((resolve) => {
@@ -192,18 +233,52 @@
             }
         }
 
-        let chartInstance = null;
-
         function showChart(sym, data) {
+            currentSym = sym;
+            currentData = data;
+
             document.getElementById('status-panel').style.display = 'none';
             document.getElementById('chart-view').style.display = 'block';
             document.getElementById('chart-title').innerText = `${sym.name} 歷史趨勢`;
 
-            const ctx = document.getElementById('myChart').getContext('2d');
-            const valField = sym.field || 'Close';
-            const dateField = sym.dateField || 'Date';
+            // 重置按鈕狀態
+            document.querySelectorAll('.range-btn').forEach(btn => btn.classList.remove('active'));
+            const defaultBtn = Array.from(document.querySelectorAll('.range-btn')).find(b => b.innerText === '1M');
+            if (defaultBtn) defaultBtn.classList.add('active');
 
-            const plotData = data.slice(-100);
+            renderChart('1M');
+        }
+
+        function changeRange(range, btn) {
+            document.querySelectorAll('.range-btn').forEach(b => b.classList.remove('active'));
+            btn.classList.add('active');
+            renderChart(range);
+        }
+
+        function renderChart(range) {
+            const ctx = document.getElementById('myChart').getContext('2d');
+            const valField = currentSym.field || 'Close';
+            const dateField = currentSym.dateField || 'Date';
+
+            let plotData = [...currentData];
+            const now = new Date();
+            let cutoff = null;
+
+            if (range === '1W') cutoff = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
+            else if (range === '1M') cutoff = new Date(now.getFullYear(), now.getMonth() - 1, now.getDate());
+            else if (range === '3M') cutoff = new Date(now.getFullYear(), now.getMonth() - 3, now.getDate());
+            else if (range === '6M') cutoff = new Date(now.getFullYear(), now.getMonth() - 6, now.getDate());
+            else if (range === '1Y') cutoff = new Date(now.getFullYear() - 1, now.getMonth(), now.getDate());
+
+            if (cutoff) {
+                plotData = plotData.filter(d => new Date(d[dateField]) >= cutoff);
+            }
+
+            // 如果點太多則抽樣 (限制最多 200 點)
+            if (plotData.length > 200) {
+                const step = Math.ceil(plotData.length / 200);
+                plotData = plotData.filter((_, i) => i % step === 0);
+            }
 
             if (chartInstance) chartInstance.destroy();
 
@@ -212,12 +287,13 @@
                 data: {
                     labels: plotData.map(d => new Date(d[dateField]).toLocaleDateString()),
                     datasets: [{
-                        label: sym.name,
+                        label: currentSym.name,
                         data: plotData.map(d => parseFloat(d[valField])),
                         borderColor: '#3498db',
                         backgroundColor: 'rgba(52, 152, 219, 0.1)',
                         tension: 0.2,
-                        fill: true
+                        fill: true,
+                        pointRadius: plotData.length > 50 ? 0 : 3
                     }]
                 },
                 options: {
@@ -225,7 +301,10 @@
                     plugins: {
                         legend: { display: false }
                     },
-                    interaction: { mode: 'index', intersect: false }
+                    interaction: { mode: 'index', intersect: false },
+                    scales: {
+                        x: { grid: { display: false } }
+                    }
                 }
             });
         }
